# magnetar

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: create-docker-image.yaml
config/: .gitignore  default.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/web_model/: acct.rs  mod.rs
core/src/web_model/webfinger/: mod.rs
ext_activity_pub/: Cargo.toml
ext_calckey_model/: Cargo.toml
ext_calckey_model/entity_ck/: Cargo.toml
ext_calckey_model/entity_ck/src/entities/: abuse_user_report.rs  access_token.rs  ad.rs  announcement.rs  announcement_read.rs  antenna.rs  antenna_note.rs  app.rs  attestation_challenge.rs  auth_session.rs  blocking.rs  channel.rs  channel_following.rs  channel_note_pining.rs  clip.rs  clip_note.rs  drive_file.rs  drive_folder.rs  emoji.rs  follow_request.rs  following.rs  gallery_like.rs  gallery_post.rs  hashtag.rs  instance.rs  messaging_message.rs  meta.rs  migrations.rs  mod.rs  moderation_log.rs  muted_note.rs  muting.rs  note.rs  note_favorite.rs  note_reaction.rs  note_thread_muting.rs  note_unread.rs  note_watching.rs  notification.rs  page.rs  (+32 more)
ext_calckey_model/src/: lib.rs
ext_nodeinfo/: Cargo.toml
ext_nodeinfo/src/: lib.rs  version_1_0.rs  version_1_1.rs  version_2_0.rs  version_2_1.rs
ext_webfinger/: Cargo.toml
ext_webfinger/src/: webfinger.rs
src/: activity_pub.rs  config.rs  main.rs  nodeinfo.rs  util.rs  webfinger.rs
src/web_model/: mod.rs
src/web_model/activity_streams/: mod.rs
src/web_model/jsonld/: mod.rs
src/web_model/webfinger/: mod.rs
