[package]
name = "magnetar"
version = "0.1.0"
license = "APGL"
edition = "2021"

[workspace]
members = [
    ".",
    "core"
]

[dependencies]
magnetar_core = { path = "./core", version = "0.1" }

anyhow = "1.0"

dotenvy = "0.15"

axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.24", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["cors", "trace"] }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

serde = { version = "1.0", features = ["derive"] }