[package]
name = "magnetar"
description = "An exploratory ActivityPub project"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[workspace]
members = [
    ".",
    "ext_nodeinfo",
    "ext_webfinger",
    "core"
]

[dependencies]
magnetar_core = { path = "./core", version = "0.1" }
magnetar_webfinger = { path = "./ext_webfinger", version = "0.1"}

anyhow = "1.0"

dotenvy = "0.15"

axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.24", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

ring = "0.16"
rand = { version = "0.8", features = ["getrandom"] }
rsa = "0.8"

serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

serde_json = "1.0"