[package]
name = "magnetar_core"
description = "A library to power an exploratory ActivityPub project"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.3", features = ["serde"] }